# samba-solar-production

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  config.yaml  hacs.json  pyproject.toml  run.sh
.github/workflows/: build.yml  release.yml  security.yml  test.yml
custom_components/solar_production/: __init__.py  config_flow.py  const.py  coordinator.py  influxdb_helper.py  inverter_control.py  manifest.json  select.py  sensor.py  solar-production-panel.js
custom_components/solar_production/translations/: en.json  nl.json
solar-dashboard/: index.html  package-lock.json  package.json  vite.config.js
solar-dashboard/src/: App.jsx  chartHelpers.js  main.jsx  sambaTheme.js
solar-dashboard/src/components/: ControlPanel.jsx  DegradationChart.jsx  ForecastChart.jsx  HealthTab.jsx  HistoricalChart.jsx  InverterHealthChart.jsx  ProductionTodayChart.jsx
