[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py311"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "solar-dashboard",  # Frontend (React/Vite)
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Function calls in argument defaults (common in HA)
    "N",     # Naming conventions
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["solar_production"]

# ============================================================================
# Bandit Configuration
# ============================================================================
[tool.bandit]
exclude_dirs = [".venv", "build", "solar-dashboard"]
skips = ["B101", "B110"]
